force-app/package/core/objects/Mapped_sObject__c/Mapped_sObject__c.object-meta.xml
<CustomObject>
    <label>Mapped sObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapped sObject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>