force-app/package/core/objects/Mapped_sObject__c/fields/Ignore_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if you don&apos;t want any triggers to run</inlineHelpText>
    <label>Ignore Triggers</label>
    <type>Checkbox</type>
</CustomField>