force-app/package/core/objects/Mapped_sObject__c/fields/Number_of_Mapped_Fields__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Mapped_Fields__c</fullName>
    <label>Number of Mapped Fields</label>
    <summaryForeignKey>Mapped_sObject_Field__c.Mapped_sObject__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>