force-app/package/core/objects/Mapped_sObject__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>The order is required to define the loading order in the JSON. Make sure that when you reference parent records, the parent records are loaded first</inlineHelpText>
    <label>Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>