force-app/package/core/objects/Mapped_sObject__c/fields/Parent_sObject__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObject__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Mapped sObject</label>
    <referenceTo>Mapped_sObject__c</referenceTo>
    <relationshipLabel>Child_sObjects</relationshipLabel>
    <relationshipName>Child_sObjects</relationshipName>
    <type>Lookup</type>
</CustomField>