force-app/package/core/objects/Mapped_sObject__c/fields/Parent_sObjectType__c.field-meta.xml
<CustomField>
    <fullName>Parent_sObjectType__c</fullName>
    <inlineHelpText>The sObjectType of the parent object</inlineHelpText>
    <label>Parent sObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>