force-app/package/core/objects/Mapped_sObject__c/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>The API nName of the lookup field to the parent object</description>
    <inlineHelpText>The API nName of the lookup field to the parent object</inlineHelpText>
    <label>(Parent) Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>