force-app/package/core/objects/Mapped_sObject__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <defaultValue>&apos;Auto populated based on (Parent) Relationship Field value&apos;</defaultValue>
    <description>The API name of the parent relationship</description>
    <label>(Parent) Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>