force-app/package/core/objects/Mapped_sObject__c/fields/Schema_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Schema_Mapping__c</fullName>
    <label>Schema Mapping</label>
    <referenceTo>Schema_Mapping__c</referenceTo>
    <relationshipLabel>Mapped sObjects</relationshipLabel>
    <relationshipName>Mapped_sObjects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>