force-app/package/core/objects/Mapped_sObject__c/fields/sObjectType__c.field-meta.xml
<CustomField>
    <fullName>sObjectType__c</fullName>
    <inlineHelpText>The metadata API name of the Mapped sObject</inlineHelpText>
    <label>sObjectType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>